0216: Notes for tt08-vga-fun finalisation inc. segmented CSDAC

--- a/0215-2024-08-21.md
+++ b/0215-2024-08-21.md
@@ -133,7 +133,8 @@ make tt_um_algofoogle_tt08_vga_fun.sim.spice # Takes a few minutes; file is 13MB
 # Copy out subckt line from .sim.spice file, and use for basis of sim/spice/full_spice_sim.cir `xtt` instance.
 # In full_spice_sim.cir, also remove brackets [] from ports.
 #NOTE: Last identifier is the name of the cell with _parax on the end: tt_um_algofoogle_tt08_vga_fun_parax
-# Replace VDPWR with vcc.
+# Replace VDPWR with vcc (1.8V), VGND with 0, and VAPWR with vcca (3.3V).
+make cleanfull
 ```
 
 Extract TT08 pin loading circuit:
