Tie off 0218, start 0219

--- a/0218-2024-10-05.md
+++ b/0218-2024-10-05.md
@@ -2,7 +2,7 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0217**-2024-09-29.md](./0217-2024-09-29.md) | *Next journal TBA* |
+| [**0217**-2024-09-29.md](./0217-2024-09-29.md) | [**0219**-2024-10-07.md](./0219-2024-10-07.md) |
 
 # GFMPW-1 basic bring-up
 
@@ -138,6 +138,7 @@ user_defines.v shows the meaning of GPIO config values that appear as 16 bit val
     *   Activate the shift register that loads all GPIO config:
         *   Reg 0x13, write 1
 *   It should now be possible to see 10MHz clock outputs on GPIOs 14 and 15 (with 14 probably very slightly lagging 15, i.e. by about 8ns).
+*   If you want, you could now try writing to the Caravel DLL registers to test different clocks.
 
 ## Testing the Caravel CPU with basic blink firmware
 
@@ -167,8 +168,8 @@ user_defines.v shows the meaning of GPIO config values that appear as 16 bit val
     void delay(const int d)
     {
         // Configure timer for a single-shot countdown:
-    	reg_timer0_config = 0;
-    	reg_timer0_data = d;
+        reg_timer0_config = 0;
+        reg_timer0_data = d;
         reg_timer0_config = 1;
         // Loop, waiting for value to reach zero:
         reg_timer0_update = 1;  // latch current value
@@ -185,11 +186,11 @@ user_defines.v shows the meaning of GPIO config values that appear as 16 bit val
         reg_gpio_ien = 1;
         reg_gpio_oeb = 0;
 
-    	while (1) {
+        while (1) {
             reg_gpio_out = 1;   // LED D3 OFF
-    		delay(2000000);
+            delay(2000000);
             reg_gpio_out = 0;   // LED D3 ON
-    		delay(2000000);
+            delay(2000000);
         }
     }
     ```
@@ -201,4 +202,120 @@ user_defines.v shows the meaning of GPIO config values that appear as 16 bit val
 *   Compile and flash this blink firmware to the Caravel board's SPI Flash ROM by doing: `make flash`
     *   NOTE: While the flash is being erased and then programmed, LED D2 should be lit and D1 should blink.
 *   LED D3 should blink after that.
+
+## Testing the mux
+
+*   Inside caravel_board, create `firmware/gf180/mux_test/`:
+    *   Copy in `Makefile` from above (and modify it to set `PATTERN = mux_test`)
+    *   Copy in [mux_tests.c from algofoogle-multi-caravel repo](https://github.com/algofoogle/algofoogle-multi-caravel/blob/gf180/verilog/dv/mux_tests/mux_tests.c) as `mux_test.c` (NOTE: There's [a newer version of this file](https://github.com/algofoogle/algofoogle-multi-caravel/blob/gf180/verilog/dv/cocotb/mux_test/mux_test.c) but it relies on `firmware_apis.h` which I don't yet know how to *properly* integrate from [here](https://github.com/efabless/caravel_mgmt_soc_gf180mcu/blob/main/verilog/dv/firmware/APIs/firmware_apis.h) into the caravel_board flow).
+    *   Replace the `stub.c` include to `stub.h` (because `Makefile` already includes `stub.c`).
+    *   Replace:
+        *   "`reg_la0`..." => "`reg_la2`..."
+        *   "`reg_la1`..." => "`reg_la3`..."
+        *   Why? See [reg_la1_data_in weirdness](#reg_la1_data_in-weirdness) below, if you care.
+    *   Add in a blink loop at the end, based on the example above.
+    *   Note that this mux_test.c firmware will:
+        *   Enable output for Caravel's `gpio` pin.
+        *   Select design 13 (one of the basic output test patterns).
+        *   Configure `GPIO[37:8]` to be bidirectional, thus allowing output control from the design.
+        *   Then select design 14 (inverted output test patterns).
+        *   Enter endless loop blinking the `gpio` pin.
+*   Build/flash the firmware: `make flash`
+*   Once this firmware runs and enters the blinking state, design 14 should be selected, which [is a simple test pattern](https://github.com/algofoogle/algofoogle-multi-caravel/blob/19251b1d9f929e2b2e8c169404437b8a2398560e/verilog/rtl/mux/top_design_mux.v#L454):
+    *   Should be able to probe `IO[31:24]` and see `10101010` outputs, then on `IO[23:16]` see `01010101`.
+
+
+## Other notes
+
+*   The mux registers power up in a random state, which means the active project (the one controlling the IOs) is selected at random.
+*   Additionally, its control lines (e.g. reset) might also be random.
+*   Power-cycling is the only way to (hopefully) get different states on the registers, and they have a tendency to hold their state as they discharge, and otherwise tend to lean more to a given state at power-on (so it's not completely random; there are biases).
+*   All designs have the same clock source (`wb_clk_i`). They can be reset through a variety of means.
+*   Across various power-cycles, I was sometimes getting:
+    *   Various GPIOs being stuck high or low
+    *   IO28 oscillating at 2.5MHz -- I later worked out this was Diego's `addr[0]` pin. Sometimes it wouldn't work: GPIO[6] is Diego's reset, and this was floating.
+    *   It looked like some pins were behaving as inputs (i.e. they could pick up noise, so seemingly weren't being driven)
+    *   These were all clues that the mux might be working, as well as the designs, but that I was controlling it incorrectly.
+    *   I got lucky when it seemed to start up one time with [design 11](https://github.com/algofoogle/algofoogle-multi-caravel/blob/19251b1d9f929e2b2e8c169404437b8a2398560e/verilog/rtl/mux/top_design_mux.v#L394) because this allows for some basic debug.
+
+
+## Next steps
+
+*   See my next journal entry: [0219: GFMPW-1 bring-up (continued)](./0219-2024-10-07.md)
+
+
+## TODO
+
+*   Make better firmware that uses helper macros to control mux
+*   Provide example firmware and expected GPIO behaviour, inc. loopbacks
+*   Provide links to all the various Verilog sources
+*   Explain IO mapping to designs
+*   List IOs for designs
+
+
+## `reg_la1_data_in` weirdness
+
+> [!NOTE]
+>
+> This section is a lot more information than you want, so here's a **TL;DR**:
+> * **In sky130 projects**, if you want your firmware to assert something on the LA bank 0 pins (`la_data_in[31:0]`), write to the `reg_la0_data` register. If you want it to sense something on the corresponding LA bank 0 pins (`la_data_out[31:0]`), read from the `reg_la0_data_in` register. `reg_la1_*` is the next bank up.
+> * **In GFMPW projects**, if you want your firmware to assert something on the LA bank 0 pins (`la_data_in[31:0]`), write to **the `reg_la2_data` register**. If you want it to sense something on the corresponding LA bank 0 pins (`la_data_out[31:0]`), read from **the `reg_la2_data_in` register**. **`reg_la3_*`** is the next bank up. Don't use `reg_la1/0_*` -- they exist but don't do what you want.
+
+The above is all you really need to know to make working firmware that controls the mux. If you care about all the details, though, you can read on...
+
+For the Caravel CPU to assert something on an LA pin (i.e. `la_data_in[*]`), it must write to one of the `reg_la*_data` registers. To sense an LA pin (i.e. `la_data_out[*]`) it must read from one of the `reg_la*_data_in` registers. [This was unclear](https://web.open-source-silicon.dev/t/22781557/i-expect-that-is-just-a-holdover-from-some-earlier-version-o) because there is still [evidence of this in the 'caravel' repo](https://github.com/efabless/caravel/blob/49c5a688b1e8142c9790008069cca352e30992f9/verilog/dv/caravel/defs.h#L47-L61) but it doesn't work this way anymore.
+
+**Additionally for GFMPW, though**, while the registers (namely their addresses in firmware headers) are correctly defined for sky130, they are **not** for gf180. In particular, if you have firmware for a GFMPW chip that accesses `reg_la3_*`/`reg_la2_*` (which GFMPW shouldn't have, since it only has 64 LA channels instead of 128, thus it lacks LA banks 3 and 2), it will actually be accessing the registers of LA banks 1 and 0 respectively (*as though you were* accessing `reg_la1_*`/`reg_la0_*`). If you try actually using `reg_la0_data`, it will be wrong: it will be accessing a register that is off by +8. This is a quirk of the generic `defs.h` pattern and the way the LA bank registers are reverse-numbered (I guess big-endian).
+
+Evidently, this is an oddity that's known and accepted by the GFMPW version of the "firmware APIs", [where `reg_la3/2_*` are used intentionally](https://github.com/efabless/caravel_mgmt_soc_gf180mcu/blob/0f3bc96eabbde0a2b6c2bef479edd04d44c5b8e9/verilog/dv/firmware/APIs/la.h#L85-L86).
+
+So, to compensate for this on GFMPW, either use the `LogicAnalyzer_*` functions (e.g. `LogicAnalyzer_write`), or use `reg_la3/2_*` directly, or create some abstraction of your own.
+
+Additional evidence:
+*   I've got a sky130 caravel_user_project counter demo chip ([CI2304-E3](https://github.com/jeffdi/mpw-9-test)), where the `_data_in` version means "into the CPU from mprj", while `_data` means "out from CPU, into mprj".
+    *   I can [confirm](https://github.com/jeffdi/mpw-9-test/blob/4893a312064b64a2e9ba6a0adbb51f7b8c12cbb2/verilog/dv/la_test1/la_test1.c#L121) this successfully uses `_data_in` for the CPU to read from mprj.
+    *   [Matt's notes](https://github.com/efabless/caravel_board/tree/main/firmware/chipignite/demos#logic-analyser-notes) and [demos.c](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/demos/demos.c#L190-L194) seem to back this up also.
+    *   `_data_in` regs are [defined in caravel_mgmt_soc_litex](https://github.com/efabless/caravel_mgmt_soc_litex/blob/503eda0790085712ffef7f4ad8934c7daed3237f/verilog/dv/firmware/defs.h#L71-L74) => [CSR_LA_IN_ADDR](https://github.com/efabless/caravel_mgmt_soc_litex/blob/503eda0790085712ffef7f4ad8934c7daed3237f/verilog/dv/generated/csr.h#L282)
+*   I first picked up on this GFMPW discrepancy when I was compiling via caravel_board's `firmware/gf180`: it appeared that `_data_in` was the reverse, i.e. "out from CPU, into mprj". Certainly my mux control worked when I treated it this way (i.e. writing to `reg_la0_data_in` instead of `reg_la0_data`), and didn't work otherwise, and I speculated that this apparent reversal was due to a misalignment of register addresses, as a result of GFMPW's Caravel having only two LA banks instead of four.
+
+The problem is that the register address ranges are different, but `defs.h` assumes always 4 banks of LA registers, and so its arithmetic is off and by a quirk of how they're reverse-numbered, `reg_la0_*` and `reg_la1_*` of each "set" ends up referring to the correct banks but of the NEXT set down, e.g.:
+*   `reg_la0_iena` should refer to LA_IEN[31:0], but on GF180 instead refers to **LA_OE**[31:0].
+*   `reg_la0_oenb` should refer to LA_OE[31:0], but on GF180 instead refers to **LA_IN**[31:0].
+*   `reg_la0_data_in` should be LA_IN[31:0], but on GF180 instead refers to **LA_OUT**[31:0].
+*   `reg_la0_data` should be LA_OUT[31:0], but on GF180 is invalid.
+*   `reg_la3_iena` should be absent from GF180, but it refers to **LA_IEN**[63:32].
+
+Here's a table where I try to illustrate this:
+
+| CSR base | Name | [sky130](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/csr.h#L277-L285) | [gf180](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/generated/csr.h#L277-L321) |
+|-|-|-|-|
+| CSR_LA_BASE          | - | 0xf0003000 | 0xf0003000 |
+| | | | |
+| **CSR_LA_IEN_ADDR**  | - | [**0xf0003000**](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/csr.h#L278) | [**0xf0003000**](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/generated/csr.h#L278) |
+| | | | |
+| CSR_LA_IEN_ADDR + 0  | reg_la3_iena    | [0xf0003000](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L80): LA_IEN[127:96] | [0xf0003000](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L82): LA_IEN[63:32] |
+| CSR_LA_IEN_ADDR + 4  | reg_la2_iena    | [0xf0003004](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L81): LA_IEN[95:64]  | [0xf0003004](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L83): LA_IEN[31:0]  |
+| CSR_LA_IEN_ADDR + 8  | reg_la1_iena    | [0xf0003008](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L82): LA_IEN[63:32]  | [0xf0003008](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L84): :warning:     |
+| CSR_LA_IEN_ADDR + 12 | reg_la0_iena    | [0xf000300c](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L83): LA_IEN[31:0]   | [0xf000300c](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L85): :warning:     |
+| | | | |
+| **CSR_LA_OE_ADDR**   | - | [**0xf0003010**](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/csr.h#L280) | [**0xf0003008**](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/generated/csr.h#L290) |
+| | | | |
+| CSR_LA_OE_ADDR + 0   | reg_la3_oenb    | [0xf0003010](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L75): LA_OE[127:96]  | [0xf0003008](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L77): LA_OE[63:32]  |
+| CSR_LA_OE_ADDR + 4   | reg_la2_oenb    | [0xf0003014](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L76): LA_OE[95:64]   | [0xf000300c](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L78): LA_OE[31:0]   |
+| CSR_LA_OE_ADDR + 8   | reg_la1_oenb    | [0xf0003018](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L77): LA_OE[63:32]   | [0xf0003010](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L79): :warning:     |
+| CSR_LA_OE_ADDR + 12  | reg_la0_oenb    | [0xf000301c](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L78): LA_OE[31:0]    | [0xf0003014](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L80): :warning:     |
+| | | | |
+| **CSR_LA_IN_ADDR**   | - | [**0xf0003020**](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/csr.h#L282) | [**0xf0003010**](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/generated/csr.h#L302) |
+| | | | |
+| CSR_LA_IN_ADDR + 0   | reg_la3_data_in | [0xf0003020](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L70): LA_IN[127:96]  | [0xf0003010](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L72): LA_IN[63:32]  |
+| CSR_LA_IN_ADDR + 4   | reg_la2_data_in | [0xf0003024](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L71): LA_IN[95:64]   | [0xf0003014](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L73): LA_IN[31:0]   |
+| CSR_LA_IN_ADDR + 8   | reg_la1_data_in | [0xf0003028](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L72): LA_IN[63:32]   | [0xf0003018](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L74): :warning:     |
+| CSR_LA_IN_ADDR + 12  | reg_la0_data_in | [0xf000302c](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L73): LA_IN[31:0]    | [0xf000301c](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L75): :warning:     |
+| | | | |
+| **CSR_LA_OUT_ADDR**  | - | [**0xf0003030**](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/csr.h#L284) | [**0xf0003018**](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/generated/csr.h#L310) |
+| | | | |
+| CSR_LA_OUT_ADDR + 0  | reg_la3_data    | [0xf0003030](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L65): LA_OUT[127:96] | [0xf0003018](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L67): LA_OUT[63:32] |
+| CSR_LA_OUT_ADDR + 4  | reg_la2_data    | [0xf0003034](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L66): LA_OUT[95:64]  | [0xf000301c](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L68): LA_OUT[31:0] |
+| CSR_LA_OUT_ADDR + 8  | reg_la1_data    | [0xf0003038](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L67): LA_OUT[63:32]  | [0xf0003020](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L69): :warning: |
+| CSR_LA_OUT_ADDR + 12 | reg_la0_data    | [0xf000303c](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/chipignite/defs.h#L68): LA_OUT[31:0]   | [0xf0003024](https://github.com/efabless/caravel_board/blob/5b44f382b1276531095d4cdf9c8bc0e7a19183f8/firmware/gf180/defs.h#L70): :warning: |
 
