0219: GFMPW-1 bring-up (continued)

--- a/0219-2024-10-07.md
+++ b/0219-2024-10-07.md
@@ -6,3 +6,76 @@
 
 # GFMPW-1 bring-up (continued)
 
+I've put test firmware into subdirectories of [algofoogle-multi-caravel/firmware/](https://github.com/algofoogle/algofoogle-multi-caravel/tree/gf180/firmware).
+
+These subdirectories (e.g. [./basic_blink/](https://github.com/algofoogle/algofoogle-multi-caravel/tree/gf180/firmware/basic_blink)) should be copied into a clone of [caravel_board](https://github.com/efabless/caravel_board), nested within `/firmware/gf180/`.
+
+You can then make and flash one to your Caravel board by doing (say):
+
+```bash
+cd firmware/gf180/basic_blink
+make clean flash
+```
+
+Tests done:
+*   `MUX_DESIGN=13 make clean flash`:
+    *   Verified IO[31:16] outputs `0101010110101010`
+*   `MUX_DESIGN=14 make clean flash`:
+    *   Verified IO[31:16] outputs `1010101101010101`
+*   `MUX_DESIGN=11 make clean flash`:
+    *   Verified that IO[30:24] follow IO[37:31]
+    *   Verified that IO[23:8] follow `la_data_in[23:8]`
+*   `MUX_DESIGN=12 make clean flash`:
+    *   Measured IO[31:8]:
+        ```
+        31:30   r_mux_io5_reset_enb     zz          (Verilog error: configured as INPUTS)
+        29      io5_reset               z           (Verilog error: configured as INPUT)
+        28      sys_reset               0           sys_reset not currently asserted (disabled anyway)
+        27:26   r_mux_sel0              00          ...
+        25:24   r_mux_sel1              00          ...
+        23:22   r_mux_sel2              11          ...
+        21:20   r_mux_sel3              11          ...Select design 1100 (12)
+        19:18   r_mux_sys_reset_enb     11          Disable wb_rst_i
+        17:16   r_mux_auto_reset_enb    00          Enable "auto-reset non-selected designs"
+        15:8    i_design_reset          11111111    Manually hold all designs in reset anyway
+        ```
+    *   There's an ERROR in the Verilog: [only top 6 bits](https://github.com/algofoogle/algofoogle-multi-caravel/blob/19251b1d9f929e2b2e8c169404437b8a2398560e/verilog/rtl/mux/top_design_mux.v#L416) should be configured as inputs, [but 9 bits are](https://github.com/algofoogle/algofoogle-multi-caravel/blob/19251b1d9f929e2b2e8c169404437b8a2398560e/verilog/rtl/mux/top_design_mux.v#L411), so IO[31:29] are INPUTS instead of outputs. This doesn't affect the operation of the mux or overall chip... it just affects this one test.
+    *   NOTE: We could probably work around this by writing firmware to override IO[31:29] from BIDIR to OUTPUT.
+
+
+## Control board options
+
+I'd like a board that can be used to help test my GFMPW-1 chips, i.e. act as a universal testbench.
+
+Requirements are:
+*   Minimum of 32 GPIOs, but ideally at least 36: 32 are used by Diego's design, 2 are for a UART interface to a host PC, and ideally we'd also control Caravel's CLK and RESETb.
+*   All GPIOs should be at least 5-5.5V-tolerant, but ideally natively 5V.
+*   At least a 10MHz clock, but 40-50MHz would be better.
+*   Ideally should be PC-controlled, though it's acceptable to just be driven by its own firmware.
+
+Options include:
+*   Arduino Mega 2560 (based on ATMega2560):
+    *   5-volt native
+    *   54 GPIOs
+    *   16MHz
+    *   PWM & UART
+    *   Interrupts
+    *   1x SPI
+*   Older Arduino Mega -- basically the same?? Slightly fewer peripherals/storage?
+*   Android Open ADK (Accessories Development Kit) -- based on Arduino Mega 2560?
+*   XC9572XL, or 144/288 variants? Available in larger pin counts. 5V-tolerant (but not native).
+*   STM32F103
+    *   STM32F103R* (64-pin) looks like it has 31 5V-tolerant GPIOs
+    *   STM32F103V* (100-pin) looks like it has 60.
+    *   STM32F103Z* (144-pin) looks like it has 89.
+*   Anything with suitable bi-directional level shifters, inc. OBLS
+*   2 or more MCUs linked?
+*   89C52 has 32 GPIOs
+*   These (for example) all have internal Flash and run at up to 5.5V:
+    | Part | ISA | MHz | Price | IO count |
+    |-|-|-|-|-|
+    | PIC18F46Q10T-I/PT | ? | 64MHz | $2.21 | 36 |
+    | PIC18F55Q43-I/PT | ? | 64MHz | $2.65 | 44 |
+    | CY8C4246AZI-M443 | ? | 48MHz | $2.25 | 38 |
+    | NUC029LAN | ARM Cortex-M0 | 72MHz | $2.44 | 40 |
+    | NUC123SD4AN0 | ARM Cortex-M0 | 72MHz | $3.74 | 47 |
