Update a few old links

--- a/0046-2020-07-22.md
+++ b/0046-2020-07-22.md
@@ -1,5 +1,10 @@
 # 22 Jul 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0045**-2020-07-21](./0045-2020-07-21.md) | [**0047**-2020-07-25](./0047-2020-07-25.md) |
+
+
 I'm gearing up to try using my XC9572XL board with other components; especially an external ROM and RAM. See [`t09a`](https://github.com/algofoogle/sandpit/blob/6a654648bef9ded7e5a8ed575240eef6dd2941a2/fpga/XC9572XL/test09/t09a/test09a.v).
 
 To this end, I've soldered in some more of the header pins for FB1 and FB2.
