--- a/0047-2020-07-25.md
+++ b/0047-2020-07-25.md
@@ -1,5 +1,9 @@
 # 25 Jul 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0046**-2020-07-22](./0046-2020-07-22.md) | [**0048**-2020-07-29](./0048-2020-07-29.md) |
+
 ## ROM plug-in board
 
 I made a ROM plug-in board that fits into the CPLD board, with the intent of proving that I can read an external memory and, in this case, display its contents on the VGA screen:
