--- a/0048-2020-07-29.md
+++ b/0048-2020-07-29.md
@@ -1,5 +1,11 @@
 # 29 Jul 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0047**-2020-07-25](./0047-2020-07-25.md) | [**0049**-2020-08-02](./0049-2020-08-02.md) |
+
+# CPLD t09c rough notes
+
 Started work on `t09c`; trying out VGA timing with HSYNC and VSYNC pulses leading everything else. Will it make the design easier/harder? And will it fit better or not? One important difference: X and Y screen positions now are offset and need compensation.
 
 I want to use this approach to see if it makes it easier (and more elegant) to determine line content (especially character data) before the line starts rendering.
