Update 0219 with more GFMPW-1 testing notes

--- a/0217-2024-09-29.md
+++ b/0217-2024-09-29.md
@@ -20,12 +20,18 @@
 *   More debug functions & features via LA
 *   Multiple instances with different implementations for characterizing
 *   gpouts
-*   Half-VINF (only upper or lower VINF)
+*   Half-VINF (only upper or lower VINF). Likewise: Extended up/down leak range
 *   External clock, or user_clock2
 *   Game map in CUP memory
+*   Memory banking
 *   Use Caravel's SPI passthrough port ("flash2" on `IO[37:36,11:8]`) to allow for Flash ROM rewriting via HKSPI.
 *   Texture flip options: X and/or Y
 *   Output internal reset signal as ext. pin to help debug sync
+*   Option to advance px/py along vplane axes instead of universally
+*   Image over/under-lay
+*   SPI interfaces share data lines and just use separate CSBs, or single interface accepting both POV & register data.
+*   "Immediate" register updates
+*   IRQs with optional "next line distance override" -- ISR in local memory?
 
 ## GFMPW-1 bring-up
 
