--- a/0219-2024-10-07.md
+++ b/0219-2024-10-07.md
@@ -18,14 +18,14 @@ make clean flash
 ```
 
 Tests done:
-*   `MUX_DESIGN=13 make clean flash`:
+*   mux_test design 13: `MUX_DESIGN=13 make clean flash`:
     *   Verified IO[31:16] outputs `0101010110101010`
-*   `MUX_DESIGN=14 make clean flash`:
+*   mux_test design 14: `MUX_DESIGN=14 make clean flash`:
     *   Verified IO[31:16] outputs `1010101101010101`
-*   `MUX_DESIGN=11 make clean flash`:
+*   mux_test design 11: `MUX_DESIGN=11 make clean flash`:
     *   Verified that IO[30:24] follow IO[37:31]
     *   Verified that IO[23:8] follow `la_data_in[23:8]`
-*   `MUX_DESIGN=12 make clean flash`:
+*   mux_test design 12: `MUX_DESIGN=12 make clean flash`:
     *   Measured IO[31:8]:
         ```
         31:30   r_mux_io5_reset_enb     zz          (Verilog error: configured as INPUTS)
@@ -41,9 +41,55 @@ Tests done:
         ```
     *   There's an ERROR in the Verilog: [only top 6 bits](https://github.com/algofoogle/algofoogle-multi-caravel/blob/19251b1d9f929e2b2e8c169404437b8a2398560e/verilog/rtl/mux/top_design_mux.v#L416) should be configured as inputs, [but 9 bits are](https://github.com/algofoogle/algofoogle-multi-caravel/blob/19251b1d9f929e2b2e8c169404437b8a2398560e/verilog/rtl/mux/top_design_mux.v#L411), so IO[31:29] are INPUTS instead of outputs. This doesn't affect the operation of the mux or overall chip... it just affects this one test.
     *   NOTE: We could probably work around this by writing firmware to override IO[31:29] from BIDIR to OUTPUT.
+*   trzf_test: `make clean flash`:
+    *   gpout[2:0] present clk,clk/2,clk/4 as expected.
+    *   GPIO[9:8] seems to present VSYNC,HSYNC as expected.
+    *   GPIO[15:10] look like they could be expected RGB data.
+    *   GPIO[16] looks like expected texture CSB signal.
+    *   GPIO[17] looks like texture SCLK.
+    *   GPIO[18] appears to have a valid QSPI read command and address pattern.
 
 
-## Control board options
+# GPIO maps
+
+| GPIO | trzf/trzf2      | IO | CPUy        | IO |
+| ----:|-----------------|----|-------------|----|
+|    6 | (Unused)        | I  | rst         | I  |
+|    7 | (Unused)        | I  | ext_int     | I  |
+|    8 | o_hsync         | O  | data_bus[0] | I  |
+|    9 | o_vsync         | O  | data_bus[1] | I  |
+|   10 | o_rgb[0]        | O  | data_bus[2] | I  |
+|   11 | o_rgb[1]        | O  | data_bus[3] | I  |
+|   12 | o_rgb[2]        | O  | data_bus[4] | I  |
+|   13 | o_rgb[3]        | O  | data_bus[5] | I  |
+|   14 | o_rgb[4]        | O  | data_bus[6] | I  |
+|   15 | o_rgb[5]        | O  | data_bus[7] | I  |
+|   16 | o_tex_csb       | O  | p0_io[0]    | IO |
+|   17 | o_tex_sclk      | O  | p0_io[1]    | IO |
+|   18 | io_tex_io[0]    | IO | p0_io[2]    | IO |
+|   19 | i_tex_in[1]     | I  | p0_io[3]    | IO |
+|   20 | i_tex_in[2]     | I  | p0_io[4]    | IO |
+|   21 | i_tex_in[3]     | I  | p0_io[5]    | IO |
+|   22 | i_vec_csb       | I  | p0_io[6]    | IO |
+|   23 | i_vec_sclk      | I  | p0_io[7]    | IO |
+|   24 | i_vec_mosi      | I  | p1_io[0]    | IO |
+|   25 | i_reg_csb       | I  | p1_io[1]    | IO |
+|   26 | i_reg_sclk      | I  | p1_io[2]    | IO |
+|   27 | i_reg_mosi      | I  | p1_io[3]    | IO |
+|   28 | i_debug_vec     | I  | addr_bus[0] | O  |
+|   29 | i_debug_map     | I  | addr_bus[1] | O  |
+|   30 | i_debug_trace   | I  | addr_bus[2] | O  |
+|   31 | i_reg_outs_enb  | I  | addr_bus[3] | O  |
+|   32 | i_mode0/inc_px  | I  | addr_bus[4] | O  |
+|   33 | i_mode1/inc_py  | I  | addr_bus[5] | O  |
+|   34 | i_mode2/gen_tex | I  | addr_bus[6] | O  |
+|   35 | o_gpout[0]      | O  | addr_bus[7] | O  |
+|   36 | o_gpout[1]      | O  | addr_bus[8] | O  |
+|   37 | o_gpout[2]      | O  | addr_bus[9] | O  |
+
+
+
+# Control board options
 
 I'd like a board that can be used to help test my GFMPW-1 chips, i.e. act as a universal testbench.
 
@@ -72,10 +118,10 @@ Options include:
 *   2 or more MCUs linked?
 *   89C52 has 32 GPIOs
 *   These (for example) all have internal Flash and run at up to 5.5V:
-    | Part | ISA | MHz | Price | IO count |
+    | Part              | ISA           | MHz   | Price | IO count |
     |-|-|-|-|-|
-    | PIC18F46Q10T-I/PT | ? | 64MHz | $2.21 | 36 |
-    | PIC18F55Q43-I/PT | ? | 64MHz | $2.65 | 44 |
-    | CY8C4246AZI-M443 | ? | 48MHz | $2.25 | 38 |
-    | NUC029LAN | ARM Cortex-M0 | 72MHz | $2.44 | 40 |
-    | NUC123SD4AN0 | ARM Cortex-M0 | 72MHz | $3.74 | 47 |
+    | PIC18F46Q10T-I/PT | ?             | 64MHz | $2.21 | 36       |
+    | PIC18F55Q43-I/PT  | ?             | 64MHz | $2.65 | 44       |
+    | CY8C4246AZI-M443  | ARM Cortex-M0 | 48MHz | $2.25 | 38       |
+    | NUC029LAN         | ARM Cortex-M0 | 72MHz | $2.44 | 40       |
+    | NUC123SD4AN0      | ARM Cortex-M0 | 72MHz | $3.74 | 47       |
