--- a/0219-2024-10-07.md
+++ b/0219-2024-10-07.md
@@ -2,7 +2,7 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0218**-2024-10-05.md](./0218-2024-10-05.md) | *Next journal TBA* |
+| [**0218**-2024-10-05.md](./0218-2024-10-05.md) | [**0220**-2024-10-11.md](./0220-2024-10-11.md) |
 
 # GFMPW-1 bring-up (continued)
 
@@ -125,3 +125,7 @@ Options include:
     | CY8C4246AZI-M443  | ARM Cortex-M0 | 48MHz | $2.25 | 38       |
     | NUC029LAN         | ARM Cortex-M0 | 72MHz | $2.44 | 40       |
     | NUC123SD4AN0      | ARM Cortex-M0 | 72MHz | $3.74 | 47       |
+
+# More testing of GFMPW-1...
+
+For some notes on testing and actually seeing raybox-zero (top_raybox_zero_fsm, or just "trzf") running on GFMPW-1, see the next journal: [0220](./0220-2024-10-11.md)
